<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/action_about"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/action_history"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:title="@string/action_logout"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>